--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -29,7 +29,6 @@ executors:
 version: 2.1
 jobs:
   test-android:
-    executor: << parameters.e >>
     parameters:
       app_type: 
         type: string
@@ -46,9 +45,7 @@ jobs:
       complex_hybrid:
         type: boolean
         default: false
-      e:
-        type: executor
-        default: "android"
+    executor: "android"
     steps:
       - checkout
       - run: 
@@ -67,6 +64,9 @@ jobs:
             sudo chown -R `whoami` /usr/local/
             npm install -g sfdx-cli
             sudo chown -R `whoami` $HOME/.config/
+      - run:
+          name: Update Build Tools
+          command: sdkmanager --install "build-tools;32.0.0"
       - when:
           condition: << parameters.template >>
           steps:
@@ -95,6 +95,7 @@ jobs:
                       name: Test << parameters.app_type >> Android
                       command: cd .circleci && fastlane android type:<< parameters.app_type >> sfdx:<< parameters.sfdx >> adv_auth:<< parameters.adv_auth >>
                       when: always
+                      no_output_timeout: 20m
       - run: 
           name: Copy test results data
           command: |
