--- a/Android/app/build.gradle
+++ b/Android/app/build.gradle
@@ -13,7 +13,7 @@ buildscript {
 }
 
 android {
-    compileSdkVersion 31
+    compileSdk 33
     defaultConfig {
         minSdkVersion 24
         targetSdkVersion 31
@@ -25,7 +25,7 @@ android {
 
 dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
-    implementation 'androidx.appcompat:appcompat:1.4.0'
+    implementation 'androidx.appcompat:appcompat:1.5.1'
     androidTestImplementation 'androidx.test:runner:1.4.0'
     androidTestImplementation 'androidx.test:core:1.4.0'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
