--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -20,7 +20,7 @@ executors:
       - image: *android-env
     environment:
       TERM: "dumb"
-      GRADLE_OPTS: '-Dorg.gradle.jvmargs="-Xmx2048m -XX:+HeapDumpOnOutOfMemoryError"'
+      GRADLE_OPTS: '-Dorg.gradle.jvmargs="-Xmx2048m -XX:+HeapDumpOnOutOfMemoryError" -XX:MaxMetaspaceSize=1g'
       FASTLANE_SKIP_UPDATE_CHECK: "true"
   mac:
     macos:
