--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -145,7 +145,9 @@ jobs:
           when: always
       - run:
           name: Install SFDX
-          command: npm install -g sfdx-cli
+          command: |
+            sudo chown -R 502:20 "/Users/distiller/.npm"
+            npm install -g sfdx-cli
       - when:
           condition: << parameters.template >>
           steps:
