--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,10 +2,10 @@
 #  Each post contains a full image manifest, including iOS runtimes, devices, CocoaPods version, etc.
 #  NOTE: When updaing Xcode check the manifest for compatible chruby versions.
 anchors:
-  - &android-env     "cimg/android:2023.08.1-node"
-  - &latest-xcode    "14.3.1"
-  - &latest-ios      "16.4"
-  - &min-ios         "15.5"
+  - &android-env     "cimg/android:2024.01.1-node"
+  - &latest-xcode    "15.3"
+  - &latest-ios      "17.4"
+  - &min-ios         "16.4"
   - &device          "iPhone-SE-3rd-generation"
   - &invalid         ""
   - &MobileSyncExplorerReactNative
@@ -35,7 +35,7 @@ jobs:
     docker:
       - image: *android-env
     environment:
-      GRADLE_OPTS: '-Dorg.gradle.jvmargs="-Xmx2048m -XX:+HeapDumpOnOutOfMemoryError" -XX:MaxMetaspaceSize=2g'
+      GRADLE_OPTS: '-Dorg.gradle.jvmargs="-Xmx2048 -XX:+HeapDumpOnOutOfMemoryError" -XX:MaxMetaspaceSize=2g -Dorg.gradle.daemon=false'
       FASTLANE_SKIP_UPDATE_CHECK: "true"
     steps:
       - checkout
