--- a/Android/app/build.gradle
+++ b/Android/app/build.gradle
@@ -16,11 +16,20 @@ android {
     namespace 'com.salesforce.mobilesdk.mobilesdkuitest'
     compileSdk 34
     defaultConfig {
-        minSdkVersion 24
+        minSdkVersion 26
         targetSdkVersion 34
         versionCode 1
         versionName '1.0'
         testInstrumentationRunner 'androidx.test.runner.AndroidJUnitRunner'
+    }
+
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_17
+        targetCompatibility JavaVersion.VERSION_17
+    }
+
+    kotlinOptions {
+        jvmTarget = '17'
     }
 }
 
