--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -35,7 +35,7 @@ jobs:
     docker:
       - image: *android-env
     environment:
-      GRADLE_OPTS: '-Dorg.gradle.jvmargs="-Xmx2048 -XX:+HeapDumpOnOutOfMemoryError" -XX:MaxMetaspaceSize=2g -Dorg.gradle.daemon=false'
+      GRADLE_OPTS: '-Dorg.gradle.jvmargs="-Xmx2g -XX:MaxMetaspaceSize=1g -XX:+HeapDumpOnOutOfMemoryError" -Dorg.gradle.daemon=false -Dfile.encoding=utf-8'
       FASTLANE_SKIP_UPDATE_CHECK: "true"
     steps:
       - checkout
@@ -50,14 +50,14 @@ jobs:
             gcloud auth activate-service-account --key-file=${HOME}/gcloud-service-key.json
             gcloud --quiet config set project mobile-apps-firebase-test
       - run:
-          name: Install SFDX
+          name: Install SF CLI
           command: |
             sudo chown -R `whoami` /usr/local/
-            npm install -g sfdx-cli
+            npm install -g @salesforce/cli
             sudo chown -R `whoami` $HOME/.config/
       - run:
           name: Update Build Tools
-          command: sdkmanager --install "build-tools;32.0.0"
+          command: sdkmanager --install "build-tools;34.0.0"
       - when:
           condition: << parameters.template >>
           steps:
@@ -144,9 +144,9 @@ jobs:
           command: ./install.sh
           when: always
       - run:
-          name: Install SFDX
+          name: Install SF CLI
           command: |
-            sudo npm install -g sfdx-cli
+            sudo npm install -g @salesforce/cli
       - when:
           condition: << parameters.template >>
           steps:
