--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -168,6 +168,7 @@ jobs:
                       name: Test iOS << parameters.ios >> Complex Hybrid - Account Editor
                       command:  |
                           sudo chown -R $USER:$GROUP ~/.npm
+                          sudo chown -R $USER:$GROUP ~/.sf
                           sudo chown -R `whoami` /Users/`whoami`/Library/Preferences/
                           cd .circleci && fastlane ios type:hybrid_local ios:<< parameters.ios >> device:"<< parameters.device >>" complexHybrid:accounteditor sfdx:<< parameters.sfdx >>
                       when: always
@@ -175,6 +176,7 @@ jobs:
                       name: Test iOS << parameters.ios >> Complex Hybrid - Mobile Sync Explorer
                       command:  |
                           sudo chown -R $USER:$GROUP ~/.npm
+                          sudo chown -R $USER:$GROUP ~/.sf
                           sudo chown -R `whoami` /Users/`whoami`/Library/Preferences/
                           cd .circleci && fastlane ios type:hybrid_local ios:<< parameters.ios >> device:"<< parameters.device >>" complexHybrid:mobilesyncexplorer sfdx:<< parameters.sfdx >>
                       when: always
@@ -185,6 +187,7 @@ jobs:
                       name: Test << parameters.app_type >> iOS << parameters.ios >>
                       command:  |
                           sudo chown -R $USER:$GROUP ~/.npm
+                          sudo chown -R $USER:$GROUP ~/.sf
                           sudo chown -R `whoami` /Users/`whoami`/Library/Preferences/
                           cd .circleci && fastlane ios type:<< parameters.app_type >> ios:<< parameters.ios >> device:"<< parameters.device >>" sfdx:<< parameters.sfdx >> adv_auth:<< parameters.adv_auth >>
                       when: always
