Add tests for Android and iOS Native Login.

--- a/iOS/SalesforceMobileSDK-UITest.xcodeproj/xcshareddata/xcschemes/TestLogin.xcscheme
+++ b/iOS/SalesforceMobileSDK-UITest.xcodeproj/xcshareddata/xcschemes/TestLogin.xcscheme
@@ -82,6 +82,12 @@
             </BuildableReference>
             <SkippedTests>
                <Test
+                  Identifier = "BaseSDKTest">
+               </Test>
+               <Test
+                  Identifier = "NativeLoginTests">
+               </Test>
+               <Test
                   Identifier = "PasscodeTests">
                </Test>
             </SkippedTests>
