--- a/.github/workflows/nightly.yaml
+++ b/.github/workflows/nightly.yaml
@@ -7,123 +7,145 @@ on:
   workflow_dispatch:
 
 jobs:
-  android-base:
-    name: ${{ matrix.app_type }} Android
-    strategy:
-      fail-fast: false
-      matrix:
-        app_type:  [native, native_kotlin, hybrid_local, hybrid_remote, react_native, MobileSyncExplorerReactNative, AndroidNativeLoginTemplate]
-        include:
-            - app_type: MobileSyncExplorerReactNative
-              template: true
-            - app_type: AndroidNativeLoginTemplate
-              template: true
-    uses: ./.github/workflows/android-reusable-workflow.yaml
-    with:
-      app_type: ${{ matrix.app_type }}
-      template: ${{ matrix.template || false }}
-    secrets: inherit
+  name: ${{ matrix.app_type }} Android
+  strategy:
+    fail-fast: false
+    matrix:
+      app_type:  [native, native_kotlin, hybrid_local, hybrid_remote, react_native, MobileSyncExplorerReactNative, AndroidNativeLoginTemplate]
+      include:
+          - app_type: MobileSyncExplorerReactNative
+            template: true
+          - app_type: AndroidNativeLoginTemplate
+            template: true
+  uses: ./.github/workflows/android-reusable-workflow.yaml
+  with:
+    app_type: ${{ matrix.app_type }}
+    template: ${{ matrix.template || false }}
+  secrets: inherit
 
-  android-sfdx:
-    name: ${{ matrix.app_type }} Android sfdx
-    strategy:
-      fail-fast: false
-      matrix:
-        app_type:  [native, hybrid_local, react_native]
-    uses: ./.github/workflows/android-reusable-workflow.yaml
-    with:
-      app_type: ${{ matrix.app_type }}
-      sfdx: true
-    secrets: inherit
+android-sfdx:
+  name: ${{ matrix.app_type }} Android sfdx
+  strategy:
+    fail-fast: false
+    matrix:
+      app_type:  [native, hybrid_local, react_native]
+  uses: ./.github/workflows/android-reusable-workflow.yaml
+  with:
+    app_type: ${{ matrix.app_type }}
+    sfdx: true
+  secrets: inherit
 
-  android-adv-auth:
-    name: Android Adv Auth
-    uses: ./.github/workflows/android-reusable-workflow.yaml
-    with:
-      app_type: native
-      adv_auth: true
-    secrets: inherit
+android-adv-auth:
+  name: Android Adv Auth
+  uses: ./.github/workflows/android-reusable-workflow.yaml
+  with:
+    app_type: native
+    adv_auth: true
+  secrets: inherit
 
-  android-complex-hybrid:
-    name: Android Complex Hybrid
-    uses: ./.github/workflows/android-reusable-workflow.yaml
-    with:
-      app_type: hybrid_local
-      complex_hybrid: true
-    secrets: inherit
-    
-  ios-build-all:
-    name: ${{ matrix.app_type }} iOS ${{ matrix.ios }}
-    strategy:
-      fail-fast: false
-      matrix:
-        app_type:  [native, native_swift, hybrid_local, hybrid_remote, react_native, MobileSyncExplorerReactNative, MobileSyncExplorerSwift, iOSNativeLoginTemplate]
-        ios: ["18.2", "17.5"]
-        include:
-            - ios: "18.2"
-              xcode: "16.2"
-            - ios: "17.5"
-              xcode: "15.4"
-            - app_type: MobileSyncExplorerReactNative
-              template: true
-            - app_type: MobileSyncExplorerSwift
-              template: true
-            - app_type: iOSNativeLoginTemplate
-              template: true
-    uses: ./.github/workflows/ios-reusable-workflow.yaml
-    with:
-      app_type: ${{ matrix.app_type }}
-      ios: ${{ matrix.ios }}
-      xcode: ${{ matrix.xcode }}
-      template: ${{ matrix.template || false }}
-    secrets: inherit
-
-  ios-sfdx:
-    name: ${{ matrix.app_type }} iOS sfdx
-    strategy:
-      fail-fast: false
-      matrix:
-        app_type: [native, hybrid_local, react_native]
-    uses: ./.github/workflows/ios-reusable-workflow.yaml
-    with:
-      app_type: ${{ matrix.app_type }}
-      sfdx: true
-    secrets: inherit
-
-  ios-adv-auth:
-    name: iOS ${{ matrix.ios }} Adv Auth
-    strategy:
-      fail-fast: false
-      matrix:
-        ios: ["18.2", "17.5"]
-        include:
-          - ios: "18.2"
+android-complex-hybrid:
+  name: Complex Hybrid ${{ matrix.hybrid_type }} Android
+  strategy:
+    fail-fast: false
+    matrix:
+      hybrid_type: ["accounteditor", "mobilesyncexplorer"]
+  uses: ./.github/workflows/android-reusable-workflow.yaml
+  with:
+    app_type: hybrid_local
+    complex_hybrid: ${{ matrix.hybrid_type }}
+  secrets: inherit
+  
+ios-build-all:
+  name: ${{ matrix.app_type }} iOS ${{ matrix.ios }}
+  strategy:
+    fail-fast: false
+    matrix:
+      app_type:  [native, native_swift, hybrid_local, hybrid_remote, react_native, MobileSyncExplorerReactNative, MobileSyncExplorerSwift, iOSNativeLoginTemplate]
+      ios: ["18.3", "17.5"]
+      include:
+          - ios: "18.3"
             xcode: "16.2"
           - ios: "17.5"
             xcode: "15.4"
-    uses: ./.github/workflows/ios-reusable-workflow.yaml
-    with:
-      app_type: native
-      adv_auth: true
-      ios: ${{ matrix.ios }}
-      xcode: ${{ matrix.xcode }}
-    secrets: inherit
+          - app_type: MobileSyncExplorerReactNative
+            template: true
+          - app_type: MobileSyncExplorerSwift
+            template: true
+          - app_type: iOSNativeLoginTemplate
+            template: true
+  uses: ./.github/workflows/ios-reusable-workflow.yaml
+  with:
+    app_type: ${{ matrix.app_type }}
+    ios: ${{ matrix.ios }}
+    xcode: ${{ matrix.xcode }}
+    template: ${{ matrix.template || false }}
+  secrets: inherit
 
-  ios-complex-hybrid:
-    name: ios ${{ matrix.ios }} Complex Hybrid
-    strategy:
-      fail-fast: false
-      matrix:
-        ios: ["18.2", "17.5"]
-        include:
-          - ios: "18.2"
-            xcode: "16.2"
-          - ios: "17.5"
-            xcode: "15.4"
-    uses: ./.github/workflows/ios-reusable-workflow.yaml
-    with:
-      app_type: hybrid_local
-      complex_hybrid: true
-      ios: ${{ matrix.ios }}
-      xcode: ${{ matrix.xcode }}
-    secrets: inherit
+ios-sfdx:
+  name: ${{ matrix.app_type }} iOS sfdx
+  strategy:
+    fail-fast: false
+    matrix:
+      app_type: [native, hybrid_local, react_native]
+  uses: ./.github/workflows/ios-reusable-workflow.yaml
+  with:
+    app_type: ${{ matrix.app_type }}
+    sfdx: true
+  secrets: inherit
+
+ios-adv-auth:
+  name: Adv Auth iOS ${{ matrix.ios }}
+  strategy:
+    fail-fast: false
+    matrix:
+      ios: ["18.3", "17.5"]
+      include:
+        - ios: "18.3"
+          xcode: "16.2"
+        - ios: "17.5"
+          xcode: "15.4"
+  uses: ./.github/workflows/ios-reusable-workflow.yaml
+  with:
+    app_type: native
+    adv_auth: true
+    ios: ${{ matrix.ios }}
+    xcode: ${{ matrix.xcode }}
+  secrets: inherit
+
+ios-complex-hybrid:
+  name: Complex Hybrid ${{ matrix.hybrid_type }} iOS ${{ matrix.ios }}
+  strategy:
+    fail-fast: false
+    matrix:
+      hybrid_type: ["accounteditor", "mobilesyncexplorer"]
+      ios: ["18.3", "17.5"]
+      include:
+        - ios: "18.3"
+          xcode: "16.2"
+        - ios: "17.5"
+          xcode: "15.4"
+  uses: ./.github/workflows/ios-reusable-workflow.yaml
+  with:
+    app_type: hybrid_local
+    complex_hybrid: ${{ matrix.hybrid_type }}
+    ios: ${{ matrix.ios }}
+    xcode: ${{ matrix.xcode }}
+  secrets: inherit
+
+carthage:
+  name: Carthage iOS ${{ matrix.ios }}
+  strategy:
+    fail-fast: false
+    matrix:
+      ios: ["18.3", "17.5"]
+      include:
+        - ios: "18.3"
+          xcode: "16.2"
+        - ios: "17.5"
+          xcode: "15.4"
+  uses: ./.github/workflows/ios-reusable-workflow.yaml
+  with:
+    carthage: true
+    ios: ${{ matrix.ios }}
+    xcode: ${{ matrix.xcode }}
+  secrets: inherit
